# sitesift

./: .env.example  .gitignore  CLAUDE.md  README.md  SiteSift_Product_Spec.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260711_0001_document_analysis.py  21e763a954ce_screening_foundation_projects_sites_.py
backend/app/: main.py
backend/app/api/: deps.py  errors.py  router.py
backend/app/core/: config.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  base.py  candidate_site.py  document.py  document_finding.py  document_workflow.py  evidence.py  project.py  review.py  risk_finding.py  screening_run.py  site_score.py  workflow_event.py
backend/app/schemas/: __init__.py  brief.py  common.py  document.py  evidence.py  finding.py  health.py  project.py  screening.py  site.py
backend/app/services/: __init__.py  csv_import.py  document_confidence.py  document_errors.py  document_evidence.py  document_extraction.py  document_retrieval.py  document_review.py  document_service.py  pdf_parser.py  pdf_storage.py  ranking.py  (+5 more)
backend/tests/: conftest.py  document_analysis_test.py  document_evidence_test.py  document_extraction_test.py  document_helpers.py  document_llm_test.py  document_review_test.py  document_test_doubles.py  document_upload_test.py  factories.py  test_csv_import.py  test_health.py  test_projects_api.py  test_scoring.py  test_screening_api.py  test_seed.py  test_sites_api.py
(+70 files in other folders)
